--- a/index.html
+++ b/index.html
@@ -1,9 +1,46 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>goose</title>
+		<title>sk8er boi: At a Glance | Study Guide | CliffsNotes</title>
 	</head>
 	<body>
-		goose
+		<header> <i>sk8er boi</i> At a Glance</header>
+		<p>On this <a href="https://www.hallmarkchannel.com/movies">Hallmark Original</a>, a girl and her friends scorn sk8er boi, who grows up to be cool. Shenanigans ensue. </p>	
+	
+		<br>
+		<br>
+		<br>
+
+		<ul>
+			<li><em>Written by</em>:<a href="https://www.youtube.com/watch?v=3QVagZTrXXw">Avril Lavigne</a></li>
+			<li><em>Genres: <i>bildungsroman</i> (coming of age novel)</em></li>
+			<li><em>First Published: 2002</em></li>
+		</ul>
+
+		<u>Summary</u>
+		<p>haha no spoilers</p>
+		<br>
+
+		<u>Other Notes</u>
+		<table>
+			<tr>
+				<th>he</th>
+				<th>she</th>
+			</tr>
+			<tr>
+				<td>was a boy</td>
+				<td>was a girl</td>
+			</tr>
+			<tr>
+				<td>was a punk</td>
+				<td>did ballet</td>
+			</tr>
+			<tr>
+				<td>was a sk8er boi</td>
+				<td>said see u later boi</td>
+			</tr>
+		</table>
 	</body>
+
+	<a href="https://github.com/JacquelineMai/JacquelineMai.github.io"><small>information from a reliable source, located here</small></a>
 </html>
