--- a/index.html
+++ b/index.html
@@ -4,13 +4,11 @@
 		<title>sk8er boi: At a Glance | Study Guide | CliffsNotes</title>
 	</head>
 	<body>
+		<img src="banner.PNG" alt="informative banner with no mismatching shades of yello">
 		<header> <i>sk8er boi</i> At a Glance</header>
 		<p>On this <a href="https://www.hallmarkchannel.com/movies">Hallmark Original</a>, a girl and her friends scorn sk8er boi, who grows up to be cool. Shenanigans ensue. </p>	
-	
 		<br>
 		<br>
-		<br>
-
 		<ul>
 			<li><em>Written by</em>:<a href="https://www.youtube.com/watch?v=3QVagZTrXXw">Avril Lavigne</a></li>
 			<li><em>Genres: <i>bildungsroman</i> (coming of age novel)</em></li>
@@ -20,7 +18,14 @@
 		<u>Summary</u>
 		<p>haha no spoilers</p>
 		<br>
-
+		<div class="row">
+			<div class="column">
+			  <img src="goose1.PNG" alt="see him sk8" style="width:100%">
+			</div>
+			<div class="column">
+			  <img src="goose2.PNG" alt="see her twirl" style="width:100%">
+			</div>
+		</div> 
 		<u>Other Notes</u>
 		<table>
 			<tr>
