--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>sk8er boi: At a Glance | Study Guide | CliffsNotes</title>
+		<link rel="stylesheet" href="main.css">
 	</head>
 	<body>
 		<img src="banner.PNG" alt="informative banner with no mismatching shades of yello">
