--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<link rel="stylesheet" href="main.css">
 	</head>
 	<body>
+		<div class="main_block">
 		<img src="banner.PNG" alt="informative banner with no mismatching shades of yello">
 		<header> <i>sk8er boi</i> At a Glance</header>
 		<p>On this <a href="https://www.hallmarkchannel.com/movies">Hallmark Original</a>, a girl and her friends scorn sk8er boi, who grows up to be cool. Shenanigans ensue. </p>	
@@ -46,6 +47,7 @@
 				<td>said see u later boi</td>
 			</tr>
 		</table>
+		</div>
 	</body>
 
 	<a href="https://github.com/JacquelineMai/JacquelineMai.github.io"><small>information from a reliable source, located here</small></a>
