--- a/index.html
+++ b/index.html
@@ -4,17 +4,16 @@
 		<title>sk8er boi: At a Glance | Study Guide | CliffsNotes</title>
 		<link rel="stylesheet" href="main.css">
 	</head>
-	<body>
+	<body class="body">
 		<div class="main_block">
 		<img src="banner.PNG" alt="informative banner with no mismatching shades of yello">
 		<header> <i>sk8er boi</i> At a Glance</header>
 		<p>On this <a href="https://www.hallmarkchannel.com/movies">Hallmark Original</a>, a girl and her friends scorn sk8er boi, who grows up to be cool. Shenanigans ensue. </p>	
 		<br>
-		<br>
 		<ul>
-			<li><em>Written by</em>:<a href="https://www.youtube.com/watch?v=3QVagZTrXXw">Avril Lavigne</a></li>
-			<li><em>Genres: <i>bildungsroman</i> (coming of age novel)</em></li>
-			<li><em>First Published: 2002</em></li>
+			<li><b>Written by</b>:<a href="https://www.youtube.com/watch?v=3QVagZTrXXw">Avril Lavigne</a></li>
+			<li><b>Genres: <i>bildungsroman</i> (coming of age novel)</b></li>
+			<li><b>First Published: 2002</b></li>
 		</ul>
 
 		<u>Summary</u>
@@ -29,7 +28,7 @@
 			</div>
 		</div> 
 		<u>Other Notes</u>
-		<table>
+		<table class="table">
 			<tr>
 				<th>he</th>
 				<th>she</th>
@@ -48,6 +47,13 @@
 			</tr>
 		</table>
 		</div>
+
+		<p><u>Discussion Questions</u></p>
+		<ul>
+			<li>Could it be any more obvious?</li>
+			<li>What more can I say?</li>
+		</ul>
+
 	</body>
 
 	<a href="https://github.com/JacquelineMai/JacquelineMai.github.io"><small>information from a reliable source, located here</small></a>
