--- a/index.html
+++ b/index.html
@@ -20,40 +20,57 @@
 		<p>haha no spoilers</p>
 		<br>
 		<div class="row">
-			<div class="column">
-			  <img src="goose2.PNG" alt="see him sk8" style="width:100%">
+			<div class="column1">
+				<figure>
+					<img src="goose2.PNG">
+					<figcaption class="caption">see her twirl</figcaption>
+				</figure>		
 			</div>
-			<div class="column">
-			  <img src="goose1.PNG" alt="see her twirl" style="width:100%">
+			<div class="column1">
+				<figure>
+					<img src="goose1.PNG">
+					<figcaption class="caption">see him sk8</figcaption>
+				</figure>	
 			</div>
 		</div> 
-		<u>Other Notes</u>
-		<table class="table">
-			<tr>
-				<th>he</th>
-				<th>she</th>
-			</tr>
-			<tr>
-				<td>was a boy</td>
-				<td>was a girl</td>
-			</tr>
-			<tr>
-				<td>was a punk</td>
-				<td>did ballet</td>
-			</tr>
-			<tr>
-				<td>was a sk8er boi</td>
-				<td>said see u later boi</td>
-			</tr>
-		</table>
-		</div>
+		<div class="row">
+			<div class="column2">
+				<u>Other Notes</u>
+				<table class="table">
+					<tr>
+						<th>he</th>
+						<th>she</th>
+					</tr>
+					<tr>
+						<td>was a boy</td>
+						<td>was a girl</td>
+					</tr>
+					<tr>
+						<td>was a punk</td>
+						<td>did ballet</td>
+					</tr>
+					<tr>
+						<td>was a sk8er boi</td>
+						<td>said see u later boi</td>
+					</tr>
+				</table>
+			</div>
+			<div class="column2">
+				<figure>
+					<img src="goose3.PNG">
+					<figcaption class="caption"><a href="https://www.youtube.com/watch?v=Bkbh7gaTwN4">a rockstar on TV</a></figcaption>
+				</figure>
+			</div>
+			<div class="column2">
+				<p><u>Discussion Questions</u></p>
+				<ul>
+					<li>Could it be any more obvious?</li>
+					<li>What more can I say?</li>
+				</ul>
+			</div>
+		</div> 
 
-		<p><u>Discussion Questions</u></p>
-		<ul>
-			<li>Could it be any more obvious?</li>
-			<li>What more can I say?</li>
-		</ul>
-
+		</div>		
 	</body>
 
 	<a href="https://github.com/JacquelineMai/JacquelineMai.github.io"><small>information from a reliable source, located here</small></a>
