--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
 		<div class="row">
 			<div class="column1">
 				<figure>
-					<img src="goose2.PNG">
+					<img class="img1" src="goose2.PNG">
 					<figcaption class="caption">see her twirl</figcaption>
 				</figure>		
 			</div>
 			<div class="column1">
 				<figure>
-					<img src="goose1.PNG">
+					<img class="img1" src="goose1.PNG">
 					<figcaption class="caption">see him sk8</figcaption>
 				</figure>	
 			</div>
@@ -57,7 +57,7 @@
 			</div>
 			<div class="column2">
 				<figure>
-					<img src="goose3.PNG">
+					<img class="img1" src="goose3.jpg">
 					<figcaption class="caption"><a href="https://www.youtube.com/watch?v=Bkbh7gaTwN4">a rockstar on TV</a></figcaption>
 				</figure>
 			</div>
