--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	</head>
 	<body class="body">
 		<div class="main_block">
-		<img src="banner.PNG" alt="informative banner with no mismatching shades of yello">
+		<img class="img1" src="banner.PNG" alt="informative banner with no mismatching shades of yello">
 		<header> <i>sk8er boi</i> At a Glance</header>
 		<p>On this <a href="https://www.hallmarkchannel.com/movies">Hallmark Original</a>, a girl and her friends scorn sk8er boi, who grows up to be cool. Shenanigans ensue. </p>	
 		<br>
