--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 		<img class="img1" src="banner.PNG" alt="informative banner with no mismatching shades of yello">
 		<header> <i>sk8er boi</i> At a Glance</header>
 		<p>On this <a href="https://www.hallmarkchannel.com/movies">Hallmark Original</a>, a girl and her friends scorn sk8er boi, who grows up to be cool. Shenanigans ensue. </p>	
-		<br>
 		<ul>
 			<li><b>Written by</b>:<a href="https://www.youtube.com/watch?v=3QVagZTrXXw">Avril Lavigne</a></li>
 			<li><b>Genres: <i>bildungsroman</i> (coming of age novel)</b></li>
@@ -18,7 +17,7 @@
 
 		<u>Summary</u>
 		<p>haha no spoilers</p>
-		<br>
+
 		<div class="row">
 			<div class="column1">
 				<figure>
@@ -38,20 +37,20 @@
 				<u>Other Notes</u>
 				<table class="table">
 					<tr>
-						<th>he</th>
+						<th class="th">he</th>
 						<th>she</th>
 					</tr>
 					<tr>
-						<td>was a boy</td>
-						<td>was a girl</td>
+						<td class="td">was a boy</td>
+						<td class="td">was a girl</td>
 					</tr>
 					<tr>
-						<td>was a punk</td>
-						<td>did ballet</td>
+						<td class="td">was a punk</td>
+						<td class="td">did ballet</td>
 					</tr>
 					<tr>
-						<td>was a sk8er boi</td>
-						<td>said see u later boi</td>
+						<td class="td">was a sk8er boi</td>
+						<td class="td">said see u later boi</td>
 					</tr>
 				</table>
 			</div>
