--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 				<table class="table">
 					<tr>
 						<th class="th">he</th>
-						<th>she</th>
+						<th class="th">she</th>
 					</tr>
 					<tr>
 						<td class="td">was a boy</td>
