--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
 			<div class="column1">
 				<figure>
 					<img class="img1" src="goose2.PNG">
-					<figcaption class="caption">see her twirl</figcaption>
+					<figcaption><small>see her twirl</small></figcaption>
 				</figure>		
 			</div>
 			<div class="column1">
 				<figure>
 					<img class="img1" src="goose1.PNG">
-					<figcaption class="caption">see him sk8</figcaption>
+					<figcaption><small>see him sk8</small></figcaption>
 				</figure>	
 			</div>
 		</div> 
@@ -57,7 +57,7 @@
 			<div class="column2">
 				<figure>
 					<img class="img1" src="goose3.jpg">
-					<figcaption class="caption"><a href="https://www.youtube.com/watch?v=Bkbh7gaTwN4">a rockstar on TV</a></figcaption>
+					<figcaption><small><a href="https://www.youtube.com/watch?v=Bkbh7gaTwN4">a rockstar on TV</a></small></figcaption>
 				</figure>
 			</div>
 			<div class="column2">
