--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
 		<title>sk8er boi: At a Glance | Study Guide | CliffsNotes</title>
 		<link rel="stylesheet" href="main.css">
@@ -70,7 +70,6 @@
 		</div> 
 
 		</div>		
+		<a href="https://github.com/JacquelineMai/JacquelineMai.github.io"><small>information from a reliable source, located here</small></a>
 	</body>
-
-	<a href="https://github.com/JacquelineMai/JacquelineMai.github.io"><small>information from a reliable source, located here</small></a>
 </html>
