fix validation errs

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<body class="body">
 		<div class="main_block">
 		<img class="img1" src="banner.PNG" alt="informative banner with no mismatching shades of yello">
-		<header> <i>sk8er boi</i> At a Glance</header>
+		<h1> <i>sk8er boi</i> At a Glance</h1>
 		<p>On this <a href="https://www.hallmarkchannel.com/movies">Hallmark Original</a>, a girl and her friends scorn sk8er boi, who grows up to be cool. Shenanigans ensue. </p>	
 		<ul>
 			<li><b>Written by</b>:<a href="https://www.youtube.com/watch?v=3QVagZTrXXw">Avril Lavigne</a></li>
