last updates to index

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	</head>
 	<body class="body">
 		<div class="main_block">
-		<img class="img1" src="banner.PNG" alt="informative banner with no mismatching shades of yello">
+		<img class="img1" src="banner.PNG" alt="informative banner with no mismatching shades of yellow">
 		<h1> <i>sk8er boi</i> At a Glance</h1>
 		<p>On this <a href="https://www.hallmarkchannel.com/movies">Hallmark Original</a>, a girl and her friends scorn sk8er boi, who grows up to be cool. Shenanigans ensue. </p>	
 		<ul>
@@ -21,13 +21,13 @@
 		<div class="row">
 			<div class="column1">
 				<figure>
-					<img class="img1" src="goose2.PNG">
+					<img class="img1" src="goose2.PNG" alt="a stunning goose ballerina">
 					<figcaption><small>see her twirl</small></figcaption>
 				</figure>		
 			</div>
 			<div class="column1">
 				<figure>
-					<img class="img1" src="goose1.PNG">
+					<img class="img1" src="goose1.PNG" alt="a majestic skating goose">
 					<figcaption><small>see him sk8</small></figcaption>
 				</figure>	
 			</div>
@@ -56,7 +56,7 @@
 			</div>
 			<div class="column2">
 				<figure>
-					<img class="img1" src="goose3.jpg">
+					<img class="img1" src="goose3.jpg" alt="the goose, no longer in skates, plays the guitar like an angel">
 					<figcaption><small><a href="https://www.youtube.com/watch?v=Bkbh7gaTwN4">a rockstar on TV</a></small></figcaption>
 				</figure>
 			</div>
